<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_lupa_sandi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/lupa_sandi"
                android:textAlignment="textEnd"
                android:textColor="@color/green"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_masuk" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="146dp"
                android:layout_height="155dp"
                android:layout_marginTop="72dp"
                android:src="@drawable/ic_library"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditTextLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <dicoding.zulfikar.literasearchapp.view.custom.EmailEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_regular"

                    android:inputType="textEmailAddress"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEditTextLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <dicoding.zulfikar.literasearchapp.view.custom.PasswordEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="textPassword"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/email"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/password"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout" />

            <Button
                android:id="@+id/button_masuk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/masuk"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_daftar" />

            <TextView
                android:id="@+id/tv_daftar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/belum_punya_akun_daftar_disini"
                android:textAlignment="textEnd"
                android:textColor="@color/green"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="atau masuk dengan"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_lupa_sandi" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="5dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@+id/textView15"
                app:layout_constraintEnd_toStartOf="@id/textView15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView15" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="30dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@+id/textView15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textView15"
                app:layout_constraintTop_toTopOf="@+id/textView15" />

            <ImageButton
                android:id="@+id/button_google"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/google_color_svgrepo_com"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>